<resources>
    <string name="app_name">News related to Turkey</string>
    <string name="no_articles">no articles</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="date_sample_text">Mar 6, 2010</string>
    <string name="time_sample_text">3:00 PM</string>
    <string name="author_sample_text">Author</string>
    <string name="section_sample_text">Section</string>
    <string name="title_sample_text">Long placeholder title that should wrap to more than 2 lines of text</string>
    <string name="No_articles">No news available, please try again later</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_nb_news_label">Number of news on screen</string>
    <string name="settings_nb_news_key" translatable="false">nb_news</string>
    <string name="settings_nb_news_default" translatable="false">10</string>

    !-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_recent_value</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_recent_label">Most Recent</string>
    <string name="settings_order_by_recent_value" translatable="false">newest</string>

    <!-- Label for order-by relevance [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by oldest [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
</resources>
